# hr_job_matching

./: .gitignore  Design.md  README.md  Task.md  config.py  main.py  pyproject.toml
data/: generation.py  models.py
data/samples/: candidate.json  job.json
src/: db.py  embed.py
src/app/: main.py
src/candidate/: embed.py
src/job/: embed.py
